--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
+
+/* #goodreads-widget {
+	font-family: georgia, serif;
+	padding: 18px 0;
+	width: 565px;
+}
+#goodreads-widget h1 {
+	font-weight: normal;
+	font-size: 16px;
+	border-bottom: 1px solid #bbb596;
+	margin-bottom: 0;
+}
+#goodreads-widget a {
+	text-decoration: none;
+	color: #660;
+}
+iframe {
+	background-color: #fff;
+}
+#goodreads-widget a:hover {
+	text-decoration: underline;
+}
+#goodreads-widget a:active {
+	color: #660;
+}
+#gr_footer {
+	width: 100%;
+	border-top: 1px solid #bbb596;
+	text-align: right;
+}
+#goodreads-widget .gr_branding {
+	color: #382110;
+	font-size: 11px;
+	text-decoration: none;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+} */
