--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	background-image: url("./images/bookshelf-background.jpg");
+	background-attachment: fixed;
+	/* background-size: cover; */
+	background-color: rgba(255, 255, 255, 0.3);
+	background-blend-mode: lighten;
 }
 
 code {
